# ROS2-PickAndPlaceRobot

./: .gitignore  README.md
src/pick_place_bringup/: CMakeLists.txt  package.xml
src/pick_place_bringup/launch/: system_bringup.launch.py
src/pick_place_calibration/: calibration_pose_sequence.json  package.xml  setup.cfg  setup.py
src/pick_place_calibration/pick_place_calibration/: apriltag_target_detection.py  calibration_data_collection.py  calibration_eye_to_hand.py  calibration_pose_sweep.py  compute_eye_to_hand_calibration.py
src/pick_place_description/: CMakeLists.txt  package.xml
src/pick_place_description/meshes/: AprilTagBoard.mtl  april_tag_plate.dae  apriltag_board_blender.dae
src/pick_place_description/urdf/: panda.urdf  panda.urdf.xacro  panda_raw.urdf
src/pick_place_interfaces/: CMakeLists.txt  package.xml
src/pick_place_interfaces/msg/: DetectedObject.msg  PddlAction.msg
src/pick_place_interfaces/srv/: CaptureSnapshot.srv  ComputeApproachJoints.srv  DetectedObjects.srv  ExecuteTaskPose.srv  GeneratePlan.srv  MoveGripper.srv  PlanToJointPositions.srv  PlanToTaskPose.srv
src/pick_place_manager/: package.xml  setup.cfg  setup.py
src/pick_place_manager/pick_place_manager/: calibration_loader.py  pick_place_manager.py  transforms.py
src/pick_place_motion_planning/: package.xml  setup.cfg  setup.py
src/pick_place_motion_planning/pick_place_motion_planning/: moveit_config_loader.py  panda_moveit_planner.py  panda_scene_planning.py  task_space_pose.py
src/pick_place_moveit_config/: CMakeLists.txt  package.xml
src/pick_place_moveit_config/config/: controllers_effort.yaml  controllers_velocity.yaml  kinematics.yaml  ompl_planning.yaml
src/pick_place_moveit_config/launch/: move_group.launch.py
src/pick_place_moveit_config/srdf/: panda.srdf
src/pick_place_pddl/: package.xml  setup.cfg  setup.py
src/pick_place_pddl/pick_place_pddl/: pddl_planner_node.py  world_state_tracker.py
src/pick_place_robot/: package.xml  setup.cfg  setup.py
src/pick_place_robot/config/: panda_arm_controller.yaml
src/pick_place_robot/launch/: sim.launch.py
src/pick_place_robot/pick_place_robot/: moveit_config_loader.py  panda_arm_control.py  panda_coordinator.py  panda_gripper.py  panda_gripper_control.py  panda_home.py  panda_moveit_planner.py  panda_scene_planning.py
src/pick_place_robot/pick_place_robot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/pick_place_robot/pick_place_robot/log/: latest_build
src/pick_place_robot/urdf/: panda.urdf  panda.urdf.xacro  panda_raw.urdf
src/pick_place_robot/worlds/: my_world.sdf  my_world_calibration.sdf
src/pick_place_robot_moveit_config/: CMakeLists.txt  package.xml
src/pick_place_robot_moveit_config/config/: controllers_effort.yaml  controllers_position,velocity.yaml  kinematics.yaml  moveit_controller_manager.yaml  ompl_planning.yaml
src/pick_place_robot_moveit_config/launch/: move_group.launch.py
src/pick_place_simulation/: package.xml  setup.cfg  setup.py
src/pick_place_simulation/launch/: sim.launch.py
src/pick_place_simulation/worlds/: my_world.sdf  my_world_calibration.sdf
src/pick_place_vision/: package.xml  setup.cfg  setup.py
src/pick_place_vision/pick_place_vision/: calibration_types.py  camera_acquisition.py  detected_cube.py  object_perception.py
