<?xml version="1.0"?>
<package format="3">
  <name>pick_place_description</name>
  <version>0.0.0</version>
  <description>Robot description package containing the Panda URDF, meshes, and materials for the pick and place robot project.</description>

  <maintainer email="M.Eggleston0001@gmail.com">michael</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>