<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pick_place_pddl</name>
  <version>0.0.0</version>
  <description>PDDL task planner for the pick-and-place robot. Accepts detected object
  poses and a goal specification, solves a blocks-world PDDL problem, and
  returns an ordered PddlAction plan to the pick_place_manager.</description>
  <maintainer email="M.Eggleston0001@gmail.com">michael</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>pick_place_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
