<?xml version="1.0"?>
<package format="3">
  <name>pick_place_robot_moveit_config</name>
  <version>0.0.0</version>
  <description>MoveIt configuration package for the pick_place_robot Panda setup.</description>

  <maintainer email="M.Eggleston0001@gmail.com">michael</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>pick_place_robot</exec_depend>
  <exec_depend>panda_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>